change to korean

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,9 +13,9 @@
         type="text"
         required
         maxlength="10"
-        placeholder="What is your name?"
+        placeholder="이름을 입력해주세요"
       />
-      <button>Log in</button>
+      <button>로그인</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
