--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Animal Momentum</title>
   </head>
   <body>
@@ -18,7 +18,10 @@
       <button>로그인</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <h2 id="clock">00:00:00</h2>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+
     <!-- 아 폰트도 적용하고! 그리고 required 일때 디자인... -->
   </body>
 </html>
