--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
       />
       <button>로그인</button>
     </form>
-    <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="오늘의 할 일은?" required />
+    </form>
+    <ul id="todo-list"></ul>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 
     <!-- 아 폰트도 적용하고! 그리고 required 일때 디자인... -->
   </body>
