--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
       <span></span>
       <span></span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 
     <!-- 아 폰트도 적용하고! 그리고 required 일때 디자인... -->
   </body>
