--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>Animal Momentum</title>
   </head>
   <body>
+    <div id="weather">
+      <span
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19.114 5.636a9 9 0 010 12.728M16.463 8.288a5.25 5.25 0 010 7.424M6.75 8.25l4.72-4.72a.75.75 0 011.28.53v15.88a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75z"
+          />
+        </svg>
+      </span>
+      <span></span>
+    </div>
+    <div id="clock">
+      <span class="clock" id="clock1">00:00:</span
+      ><span class="clock" id="clock2">00</span>
+    </div>
     <form class="hidden" id="login-form">
       <input
         type="text"
@@ -17,8 +40,7 @@
       />
       <button>로그인</button>
     </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
+    <span id="greeting" class="hidden"></span>
     <form id="todo-form">
       <input type="text" placeholder="오늘의 할 일은?" required />
     </form>
@@ -27,10 +49,7 @@
       <span></span>
       <span></span>
     </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
