--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <svg
+      id="music_icon"
       xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewBox="0 0 24 24"
@@ -16,6 +17,14 @@
       stroke="currentColor"
       class="w-6 h-6"
     >
+      <!-- <audio
+        id="audio"
+        class=""
+        hidden
+        src="music/Welcome Horizons.mp3"
+        type="audio/mp3"
+      ></audio> -->
+
       <path
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -56,21 +65,48 @@
       <button>로그인</button>
     </form>
     <span id="greeting" class="hidden"></span>
+    <div id="board">
+      <span>마을게시판</span>
+      <ul id="todo-list"></ul>
+    </div>
     <form id="todo-form">
       <input type="text" placeholder="오늘의 할 일은?" required />
     </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div id="timer">
+      <div id="timer-info">
+        <span>Timer</span>
+        <form id="timer-form">
+          <input required type="text" id="timer-min" />
+          <label for="timer-min">분</label>
+          <input required type="text" id="timer-sec" />
+          <label for="timer-sec">초</label>
+          <button>START!</button>
+        </form>
+      </div>
+      <div id="timer-line">
+        <img src="img/neoguri.png" />
+        <div></div>
+        <section>
+          <img src="img/bell.png" />
+          <span>남은시간</span>
+        </section>
+      </div>
+    </div>
+    <div id="quote-balloon" class="balloon1">
+      <div id="quote" class="balloon2">
+        <span></span>
+        <span></span>
+      </div>
     </div>
 
+    <script src="js/timer.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/music.js"></script>
 
     <!-- 아 폰트도 적용하고! 그리고 required 일때 디자인... -->
   </body>
