--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       </div>
       <div id="timer-line">
         <img id="neoguri" src="img/neoguri.png" />
-        <div></div>
+        <div>
+          <div></div>
+        </div>
         <img src="img/bell.png" />
       </div>
     </div>
